# squabble

./: .gitignore  README.md  index.html  pyproject.toml  setup.py  squabble.js
src/squabble/: __init__.py  app.py  auth.py  config.py  database.py  face.py  game.py  model.py  squabble_version.py  words.py
src/squabble/data/: dict.txt  distribution.txt
src/squabble/sql/: tables.sql
