[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/tutorials
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["aiohttp", "aiohttp_jinja2", "aiohttp_session", "aiohttp_spotify", "aiosqlite", "cryptography", "jinja2", "pkg_resources", "setuptools", "socketio", "toml", "yarl"]

[tool.poetry]
name = "squabble"
version = "0.1.0"
description = ""
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
packages = [{include = "squabble", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

