[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/tutorials
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["aiohttp", "aiohttp_security", "aiohttp_session", "asyncpg", "cryptography", "passlib", "pkg_resources", "schema", "toml"]

[tool.poetry]
name = "squabble"
version = "0.1.0"
description = ""
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
packages = [{include = "squabble", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = "^0.20.1"
schema = "^0.7.2"
aiohttp_security = "^0.4.0"
aiohttp_session = "^2.9.0"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
pytest = "^6.1.2"
pre-commit = "^2.3.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
